# pyapplemusic

./: .gitignore  README.md  pyproject.toml
src/pyapplemusic/: AppleMusic.py
src/pyapplemusic/models/: CatalogAlbum.py  CatalogArtist.py  CatalogMusicVideo.py  CatalogPlaylist.py  CatalogSongResponse.py  LibraryAlbum.py  LibraryArtist.py  LibraryMusicVideo.py  LibraryPlaylist.py  LibrarySearchResponse.py  LibrarySong.py  common.py
